[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.4", features = [ "derive" ] }
env_logger = "0.9.3"
glam = "0.22.0"
noise = "0.8.2"
pollster = "0.2.5"
rand = "0.8.5"
sdl2 = { version = "0.35.2", features = ["raw-window-handle"] }
wgpu = "0.13.1"
itertools = "0.10.1"
